# ImageToVideoPlayer

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: fpscalculator.h  frameprocessor.h  imageloader.h
src/: fpscalculator.cpp  frameprocessor.cpp  imageloader.cpp
